--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,9 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-remote_theme:  YoussefRaafatNasry/portfolYOU
+theme: minima
 plugins:
-  - jekyll-feed
+  #- jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
