--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,9 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: minima
+remote_theme: benbalter/retlab
 plugins:
+  - jekyll-remote-theme
   #- jekyll-feed
 
 # Exclude from processing.
